plugins {
    id 'java'
    id 'application'
}
// compileJavaタスクのエンコーディング
compileJava.options.encoding = 'UTF-8'
// compileTestJavaタスクのエンコーディング
compileTestJava.options.encoding = 'UTF-8'
// javadocタスクのエンコーディング
javadoc.options.encoding = 'UTF-8'
//mainClassName = 'AozoraEpub3Applet'

repositories {
    mavenCentral()
}
sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs= ["src"]
        }
    }
}
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}
application {
    // Define the main class for the application.
    mainClass.set('AozoraEpub3Applet')
}
jar {

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
      //  attributes 'Main-Class': 'AozoraEpub3'
        attributes 'Main-Class': 'AozoraEpub3Applet'
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
/*        */
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-Xlint:deprecation'
}

ant.importBuild 'ant.xml'

dependencies {
// https://mvnrepository.com/artifact/org.apache.velocity/velocity-engine-core
    implementation group: 'org.apache.velocity', name: 'velocity-engine-core', version: '2.3'

// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.16.0'
// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.16'
// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.16'
// https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.5.0-M2'


// https://mvnrepository.com/artifact/com.github.junrar/junrar
    implementation group: 'com.github.junrar', name: 'junrar', version: '7.5.5'
// https://mvnrepository.com/artifact/org.jsoup/jsoup
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.18.1'
// https://mvnrepository.com/artifact/org.apache.commons/commons-compress
    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.27.0'
// https://mvnrepository.com/artifact/commons-cli/commons-cli
    implementation group: 'commons-cli', name: 'commons-cli', version: '1.8.0'
// https://mvnrepository.com/artifact/com.github.albfernandez/juniversalchardet
    implementation group: 'com.github.albfernandez', name: 'juniversalchardet', version: '2.5.0'
// https://mvnrepository.com/artifact/org.json/json
    implementation group: 'org.json', name: 'json', version: '20240303'


}